# pipecat-quickstart-client-server

./: .gitignore  README.md
server/: bot.py  build.sh  pcc-deploy.toml  pyproject.toml
